# LLM_APIs_with_Rust

./: .gitignore  LICENSE  README.md
llm_apis/: Cargo.toml
llm_apis/src/: chat.rs  lib.rs  main.rs
llm_apis/src/chat/: oneonone.rs
llm_apis/src/tokenize/: encoding.rs
